--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.0.1",
